--- a/Conversii/Conversie/Conversie.csproj
+++ b/Conversii/Conversie/Conversie.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{B43FE97E-3027-446B-8CED-7B5E0C7216CB}</ProjectGuid>
+    <ProjectGuid>{FE4E6936-4B84-4EE9-8E17-D24EC687FD68}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>Conversii</RootNamespace>
-    <AssemblyName>Conversii</AssemblyName>
+    <RootNamespace>Conversie</RootNamespace>
+    <AssemblyName>Conversie</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="InccorectBaseException.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
